gl33-master/src/test/deca/syntax/invalid/others/testMultiStringMethode.deca
/*
Test sur les différentes valeurs de String dans une fonction. Echoue car les multi-line string

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected
*/

class MyClass{
    string a = "hello";
    string b = "world\"";
    string c = "home\\";
    string d = "hello
world";
    string e = "a
b
c
d";
}

{

}
